# iris_merge

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  GEMINI.md  README.md
include/: iris_merge.h  iris_merge.h~
proto/: table.proto
src/: iris_merge.cc  main.cc
test/: main_test.cc  main_test.cc~
